feat: add create restaurant function

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -7,9 +7,9 @@
           width="30" height="30" class="d-inline-block align-top" alt="我的餐廳清單">
         我的餐廳清單
       </a>
+      <a href="./restaurants/new">Create</a>
     </div>
   </nav>
-
   <div class="banner"></div>
 </header>
 
@@ -39,7 +39,7 @@
         {{#each restaurants}}
         <a href="/restaurants/{{this.id}}" class="text-secondary">
           <div class="card mb-3">
-            <img class="card-img-top" src="{{this.image}}" alt="Sababa 沙巴巴中東美食">
+            <img class="card-img-top" src="{{this.image}}" alt="">
             <div class="card-body p-3">
               <h6 class="card-title mb-1">{{this.name}}</h6>
 
@@ -51,7 +51,6 @@
                 {{this.rating}}
                 <i class="fa fa-star fa-xs"></i>
               </span>
-
             </div>
           </div>
         </a>
