feat: add detail page

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -52,6 +52,7 @@
                 <i class="fa fa-star fa-xs"></i>
               </span>
             </div>
+            <a href="./restaurants/{{ this._id }}">detail</a>
           </div>
         </a>
         {{/each}}
