--- a/views/index.hbs
+++ b/views/index.hbs
@@ -37,7 +37,7 @@
     <div class="col-md-10 col-12 mx-auto">
       <div class="card-columns">
         {{#each restaurants}}
-        <a href="/restaurants/{{this.id}}" class="text-secondary">
+        <a href="./restaurants/{{ this._id }}" class="text-secondary">
           <div class="card mb-3">
             <img class="card-img-top" src="{{this.image}}" alt="">
             <div class="card-body p-3">
@@ -53,6 +53,7 @@
               </span>
             </div>
             <a href="./restaurants/{{ this._id }}">detail</a>
+            <a href="./restaurants/{{ this._id }}/edit">edit</a>
           </div>
         </a>
         {{/each}}
