--- a/views/show.hbs
+++ b/views/show.hbs
@@ -17,7 +17,6 @@
 <div class="container">
   <div class="row">
     <div class="col-12 col-md-10 mx-auto">
-
       <p class="mb-1">
         <span class="text-secondary">
           <i class="fas fa-utensils pr-2"></i>
@@ -25,7 +24,6 @@
         </span>
         {{restaurant.category}}
       </p>
-
       <p class="mb-1">
         <span class="text-secondary">
           <i class="fas fa-map-marker-alt pr-2"></i>
@@ -48,10 +46,10 @@
       <p class="mb-5">
         {{restaurant.description}}
       </p>
-
       <img class="rounded mx-auto d-block mb-4 w-100" src="{{restaurant.image}}" alt="布娜飛比利時啤酒餐廳"
         style="max-width: 600px;">
     </div>
   </div>
+  <a href="/restaurants/{{ restaurant._id}}/edit">edit</a>
   <a href="/">back</a>
 </div>
