feat: add delete restaurant function

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -52,8 +52,10 @@
                 <i class="fa fa-star fa-xs"></i>
               </span>
             </div>
-            <a href="./restaurants/{{ this._id }}">detail</a>
             <a href="./restaurants/{{ this._id }}/edit">edit</a>
+            <form action="./restaurants/{{ this._id }}/delete" method="POST" style="display: inline;">
+              <button type="submit">delete</button>
+            </form>
           </div>
         </a>
         {{/each}}
