--- a/views/show.hbs
+++ b/views/show.hbs
@@ -51,5 +51,8 @@
     </div>
   </div>
   <a href="/restaurants/{{ restaurant._id}}/edit">edit</a>
+  <form action="/restaurants/{{ restaurant._id }}/delete" method="POST" style="display: inline;">
+    <button type="submit">delete</button>
+  </form>
   <a href="/">back</a>
 </div>
