feat: modify style

--- a/views/edit.hbs
+++ b/views/edit.hbs
@@ -1,5 +1,5 @@
 <form action="/restaurants/{{ restaurant._id}}/edit" method="POST">
   <input type="text" placeholder="name" name="name" value="{{restaurant.name}}">
-  <button type="submit">Save</button>
-  <a href="/">Back</a>
+  <button type="submit" class="btn btn-info">Save</button>
+  <a href="/" class="btn btn-info">Back</a>
 </form>
