--- a/views/index.hbs
+++ b/views/index.hbs
@@ -7,7 +7,9 @@
           width="30" height="30" class="d-inline-block align-top" alt="我的餐廳清單">
         我的餐廳清單
       </a>
-      <a href="./restaurants/new">Create</a>
+      <form action="./restaurants/new" style="display: inline;">
+        <button type="text" class="btn btn-info">Create</button>
+      </form>
     </div>
   </nav>
   <div class="banner"></div>
@@ -20,8 +22,8 @@
       <form action="/search">
         <h4 class="mb-2">尋找餐廳：</h4>
         <div class="input-group">
-          <input type="text" name="keyword" class="form-control" placeholder="輸入餐廳、分類" aria-label="Restaurant Name..."
-            value="" aria-describedby="search-button">
+          <input type="text" name="keyword" value="{{ keyword }}" class="form-control" placeholder="輸入餐廳、分類"
+            aria-label="Restaurant Name..." value="" aria-describedby="search-button">
           <div class="input-group-append">
             <button class="btn btn-major" type="submit" id="search-button"><i class="fa fa-search"></i></button>
           </div>
@@ -52,9 +54,14 @@
                 <i class="fa fa-star fa-xs"></i>
               </span>
             </div>
-            <a href="./restaurants/{{ this._id }}/edit">edit</a>
-            <form action="./restaurants/{{ this._id }}/delete" method="POST" style="display: inline;">
-              <button type="submit">delete</button>
+            <div style="display:flex;justify-content: space-around;margin-bottom: 10px;">
+              <form action="./restaurants/{{ this._id }}/edit" style="display: inline;">
+                <button type="text" class="btn btn-info">edit</button>
+              </form>
+              <form action="./restaurants/{{ this._id }}/delete" method="POST" style="display: inline;">
+                <button type="submit" class="btn btn-danger">delete</button>
+            </div>
+
             </form>
           </div>
         </a>
