--- a/views/new.hbs
+++ b/views/new.hbs
@@ -1,4 +1,5 @@
-<form action="/restaurants" method="POST">
+<form action="/restaurants" method="POST" style="margin: 20px 20px;">
   <input type="text" placeholder="name" name="name">
-  <button type="submit">Create</button>
+  <button type="submit" class="btn btn-info">Create</button>
+  <a href="/" class="btn btn-info">Back</a>
 </form>
