--- a/views/index.hbs
+++ b/views/index.hbs
@@ -5,7 +5,7 @@
       <a class="navbar-brand" href="/">
         <img src="https://assets-lighthouse.s3.amazonaws.com/uploads/image/file/6227/restaurant-list-logo.png"
           width="30" height="30" class="d-inline-block align-top" alt="我的餐廳清單">
-        我的餐廳清單
+        我的外送餐廳清單
       </a>
       <form action="./restaurants/new" style="display: inline;">
         <button type="text" class="btn btn-info">Create</button>
@@ -20,7 +20,8 @@
   <div class="search-bar-outer">
     <div class="search-bar-inner">
       <form action="/search">
-        <h4 class="mb-2">尋找餐廳：</h4>
+        <h4 class="mb-2">您最愛的美食，由 吸腹 為您外送
+        </h4>
         <div class="input-group">
           <input type="text" name="keyword" value="{{ keyword }}" class="form-control" placeholder="輸入餐廳、分類"
             aria-label="Restaurant Name..." value="" aria-describedby="search-button">
