--- a/views/show.hbs
+++ b/views/show.hbs
@@ -31,25 +31,25 @@
     <div class="col-12 col-md-10 mx-auto">
       <p class="mb-1">
         <span class="text-secondary">
-          <i class="fas fa-utensils pr-2"></i>
+          <i class="fa fa-utensils pr-2"></i>
           類別：
         </span>
         {{restaurant.category}}
       </p>
       <p class="mb-1">
         <span class="text-secondary">
-          <i class="fas fa-map-marker-alt pr-2"></i>
+          <i class="fa fa-map-marker-alt pr-2"></i>
           地址：
         </span>
         {{restaurant.location}}
         <a href="https://goo.gl/maps/V9mKwVJ4s5v" class="text-secondary" target="_blank">
-          <i class="fas fa-location-arrow pr-2 fa-xs"></i>
+          <i class="fa fa-location-arrow pr-2 fa-xs"></i>
         </a>
       </p>
 
       <p class="mb-1">
         <span class="text-secondary">
-          <i class="fas fa-mobile-alt pr-2"></i>
+          <i class="fa fa-mobile-alt pr-2"></i>
           電話：
         </span>
         {{restaurant.phone}}
