--- a/views/new.hbs
+++ b/views/new.hbs
@@ -23,7 +23,7 @@
     </div>
     <div class="col-md-4 mb-3">
       <label>Rating</label>
-      <input type="number" class="form-control" placeholder="rating" name="rating" min="1" max="10" required>
+      <input type="number" class="form-control" placeholder="rating" name="rating" min="0" max="10" step="0.1" required>
     </div>
     <div class="col-md-4 mb-3">
       <label>Description</label>
