--- a/views/new.hbs
+++ b/views/new.hbs
@@ -22,6 +22,10 @@
       <input type="text" class="form-control" placeholder="location" name="location">
     </div>
     <div class="col-md-4 mb-3">
+      <label>google_map</label>
+      <input type="text" class="form-control" placeholder="google_map" name="google_map">
+    </div>
+    <div class="col-md-4 mb-3">
       <label>Rating</label>
       <input type="number" class="form-control" placeholder="rating" name="rating" min="0" max="10" step="0.1" required>
     </div>
