--- a/views/new.hbs
+++ b/views/new.hbs
@@ -37,7 +37,7 @@
   <div class="form-group">
     <select class="custom-select" name="category" required>
       <option value="">Category menu</option>
-      <option value="台式料理">台式料理</option>
+      <option value="台式料理" selected>台式料理</option>
       <option value="日本料理">日本料理</option>
       <option value="義式餐廳">義式餐廳</option>
       <option value="美式餐廳">美式餐廳</option>
@@ -50,12 +50,3 @@
   <button type="submit" class="btn btn-info">Create</button>
   <a href="/" class="btn btn-info">Back</a>
 </form>
-
-
-
-{{!-- <form action="/restaurants" method="POST" style="margin: 20px 20px;">
-  餐廳中文名稱<input type="text" placeholder="name" name="name">
-  餐廳英文名稱<input type="text" placeholder="name-en" name="name-en">
-  <button type="submit" class="btn btn-info">Create</button>
-  <a href="/" class="btn btn-info">Back</a>
-</form> --}}
