--- a/views/show.hbs
+++ b/views/show.hbs
@@ -42,7 +42,7 @@
           地址：
         </span>
         {{restaurant.location}}
-        <a href="https://goo.gl/maps/V9mKwVJ4s5v" class="text-secondary" target="_blank">
+        <a href="{{restaurant.google_map}}" class="text-secondary" target="_blank">
           <i class="fa fa-location-arrow pr-2 fa-xs"></i>
         </a>
       </p>
@@ -58,8 +58,7 @@
       <p class="mb-5">
         {{restaurant.description}}
       </p>
-      <img class="rounded mx-auto d-block mb-4 w-100" src="{{restaurant.image}}" alt="布娜飛比利時啤酒餐廳"
-        style="max-width: 600px;">
+      <img class="rounded mx-auto d-block mb-4 w-100" src="{{restaurant.image}}" alt="" style="max-width: 600px;">
     </div>
   </div>
 </div>
