--- a/views/edit.hbs
+++ b/views/edit.hbs
@@ -1,4 +1,4 @@
-<form action="/restaurants/{{ restaurant._id}}/edit" method="POST" style="margin: 20px 20px;">
+<form action="/restaurants/{{ restaurant._id}}?_method=PUT" method="POST" style="margin: 20px 20px;">
   <div class="form-row">
     <div class="col-md-4 mb-3">
       <label>Name-CHT</label>
