--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -12,7 +12,22 @@
 </head>
 
 <body>
-
+  <!-- navigation -->
+  <nav class="navbar navbar-light bg-light">
+    <div class="container">
+      <a class="navbar-brand" href="/">
+        <img src="https://assets-lighthouse.s3.amazonaws.com/uploads/image/file/6227/restaurant-list-logo.png"
+          width="30" height="30" class="d-inline-block align-top" alt="我的餐廳清單">
+        {{#if isAuthenticated}}{{user.name}}'s{{/if}}
+        外送餐廳清單
+      </a>
+      {{#if isAuthenticated}}
+      <a href="/users/logout" class="btn btn-outline-info">Logout</a>
+      {{else}}
+      <a href="/users/login" class="btn btn-outline-info">Login</a>
+      {{/if}}
+    </div>
+  </nav>
   <!-- partial templates will replace the part of "body" here -->
   {{{ body }}}
   <!-- include javascript files here -->
