modify restaurantSeeder and style

--- a/views/register.hbs
+++ b/views/register.hbs
@@ -1,7 +1,7 @@
-<div class="row mt-5">
+<div class="row mt-8">
   <div class="col-md-6 m-auto">
-    <div class="card card-body">
-      <h1 class="text-center mt-3">Register</h1>
+    <div class="card card-body mt-6">
+      <h1 class="text-center mt-5">Register</h1>
       {{> message}}
       <form action="/users/register" method="POST">
         <div class="form-group">
