--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -18,7 +18,7 @@ header {
   color: #226089;
 }
 
-.banner {
+.banner  {
   position: relative;
   z-index: -1;
   margin: -5px;
@@ -27,7 +27,10 @@ header {
   background-size: cover;
   /* filter: blur(3px); */
 }
-
+.login-banner {
+  background: #dddddd center center url('https://images.unsplash.com/photo-1466978913421-dad2ebd01d17?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1567&q=80');
+  background-size: cover;
+}
 .search-bar .search-bar-outer {
   margin: 0 auto;
   max-width: 680px;
