--- a/views/index.hbs
+++ b/views/index.hbs
@@ -17,9 +17,9 @@
           </div>
         </div>
       </form>
-      <div class="function" style="display: flex;">
+      <div class="function" style="display: flex ;">
         <form action="/sort" method="get">
-          <select class="input-group-prepend" name="sort" id="select" onchange="this.form.submit()">
+          <select class="input-group-prepend mt-2" name="sort" id="select" onchange="this.form.submit()">
             <option value="">Sort</option>
             <option value="name" {{#setSelected sort "name"}} selected {{/setSelected}}>A->Z</option>
             <option value="-name" {{#setSelected sort "-name"}} selected {{/setSelected}}>Z->A</option>
@@ -29,7 +29,7 @@
           </select>
         </form>
         <form action="./restaurants/new" style="margin:0px 10px;">
-          <button type="text" class="btn btn-info">Create</button>
+          <button type="text" class="btn btn-info mt-2">Create</button>
         </form>
       </div>
     </div>
@@ -37,7 +37,7 @@
 </div>
 
 <!-- restaurant list -->
-<div class="container mt-5">
+<div class="container mt-8">
   <div class="row">
     <div class="col-md-10 col-12 mx-auto">
       <div class="card-columns">
